# hardware-adaptive-few-shot-tinynet-base

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
configs/data/: synthetic_devices_synthetic_cifar10.yaml
configs/eval/: board_benchmark_synthetic_cifar10_with_real_stm32f405rgt6.yaml  board_benchmark_synthetic_cifar10_with_real_stm32f405rgt6_ablation_full.yaml  board_benchmark_synthetic_cifar10_with_real_stm32f405rgt6_no_adaptation.yaml  board_benchmark_synthetic_cifar10_with_real_stm32f405rgt6_no_feasibility_loss.yaml  board_benchmark_synthetic_cifar10_with_real_stm32f405rgt6_no_generator_loss.yaml  board_benchmark_synthetic_cifar10_with_real_stm32f405rgt6_no_probes.yaml  board_benchmark_synthetic_cifar10_with_real_stm32f405rgt6_no_refinement.yaml  board_benchmark_synthetic_cifar10_with_real_stm32f405rgt6_no_refs.yaml  board_benchmark_synthetic_cifar10_with_real_stm32f405rgt6_no_response_aux_loss.yaml  board_benchmark_synthetic_cifar10_with_real_stm32f405rgt6_static_only.yaml  deploy_stm32f405rgt6_command.yaml  (+5 more)
data/: README.md
docs/: stm32f405_real_board_workflow.md
scripts/: _common.py  build_accuracy_dataset.py  build_synth_devices.py  collect_real_board_support.py  deploy_new_device.py  download_cifar10.py  meta_eval.py  ping_serial_board.py  prepare_data.py  run_board_benchmark.py  run_experiment_suite.py  run_stage.py  run_tests.py  summarize_kshot_support_size.py  train_hardware_models.py  train_supernet.py
(+32 files in other folders)
